# RetroForth 2022.1 Release Notes

# Core Language

- deprecated

- new words

- dictionary

- arrays

  - a:index no longer need to construct a new word to locate
    the index (backport from retro/napia)

# VM

## nga-c: retro.c

- recognize TAB as whitespace when including files

# Documentatio

# Other

# Examples

- advent of code, 2021 (day 1, 2)
- select.retro