@@ -72,6 +72,7 @@ DEVICES += interface/scripting.retro
 # DEVICES += interface/sockets.retro
 DEVICES += interface/sources.retro
 DEVICES += interface/multicore.retro
+DEVICES += interface/retro-napia.retro
 DEVICES += interface/deprecated.retro
 DEVICES += interface/unsigned.retro
 
